add self-category api
