# storage/api-docs/api-docs.json
@@ -736,6 +736,32 @@
                 ]
             }
         },
+        "/self-category": {
+            "get": {
+                "tags": [
+                    "Category"
+                ],
+                "summary": "Category checked list",
+                "description": "Self Category list",
+                "operationId": "SelfCategory",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/comment": {
             "get": {
                 "tags": [
